--- a/index.html
+++ b/index.html
@@ -23,12 +23,42 @@
                 </div>
             </div>
             <div class="col-md-5">
-                <div class="phone-heading">
-                    <h1>Old iphone giveaway</h1>
-                    <span>Giveway ends On Sunday, 20 Feb 2023 11:30 a m</span>
+                <div class="phone-info">
+                    <h1 class="giveaway">Old iphone giveaway</h1>
+                    <span>Giveway ends On Sunday, 14 Sep 2023 11:30 a m</span>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo mollitia, quas voluptatum
                         tempore, dolorum corporis exercitationem nostrum autem ipsum eum, ducimus earum nulla unde
                         necessitatibus minima quam ut ea fuga.</p>
+                    <div class="deadline">
+                        <!-- days -->
+                        <div class="deadline-format">
+                            <article>
+                                <h4 class="days">34</h4>
+                                <span>days</span>
+                            </article>
+                        </div>
+                        <!-- days -->
+                        <div class="deadline-format">
+                            <article>
+                                <h4 class="hours">34</h4>
+                                <span>hours</span>
+                            </article>
+                        </div>
+                        <!-- mins -->
+                        <div class="deadline-format">
+                            <article>
+                                <h4 class="mins">34</h4>
+                                <span>mins</span>
+                            </article>
+                        </div>
+                        <!-- secs -->
+                        <div class="deadline-format">
+                            <article>
+                                <h4 class="secs">34</h4>
+                                <span>secs</span>
+                            </article>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
